# slide-maker

./: .env.example  .gitignore  README.md  examples.sh  main.py  pyproject.toml
scratch/: check_env.py
tests/: test_main.py
